--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
-/* Properties */
-:where(body) {
-  --background-color: #222;
-  --text-color: #ffffff;
-  font-family: Arial, Helvetica, sans-serif;
+.menu {
+  color: blanchedalmond !important;
 }
-body {
-  background-color: var(--background-color);
-
+.boton-menu{
+background-color: blanchedalmond !important; 
+border-bottom: 1px solid blanchedalmond !important;
 }
-
-
