--- a/style.css
+++ b/style.css
@@ -5,3 +5,6 @@
 background-color: blanchedalmond !important; 
 border-bottom: 1px solid blanchedalmond !important;
 }
+
+.carrusel {
+  height: 700px;}
