--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+
+*{
+  margin: 0;
+  padding: 0%;
+  box-sizing: none;
+}
+
+
 .menu {
   color: blanchedalmond !important;
 }
@@ -11,4 +19,11 @@ border-bottom: 1px solid blanchedalmond !important;
 
   body {
     background-color: black;
+  }
+
+  footer{background-color: black;
+  color: white;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   }
